2005-10-14  Michal Benes  <michal dot benes at xeris dot cz>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* gst/matroska/Makefile.am:
	* gst/matroska/ebml-ids.h:
	* gst/matroska/ebml-write.c:
	* gst/matroska/ebml-write.h:
	* gst/matroska/matroska-ids.h:
	* gst/matroska/matroska-mux.c:
	* gst/matroska/matroska-mux.h:
	* gst/matroska/matroska.c: (plugin_init):
	  Port matroska muxer to 0.9 (#318847).

2005-10-13  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/speex/gstspeexenc.c: (gst_speexenc_get_tag_value),
	(comment_init), (comment_add):
	  Fix handling of GST_TAG_DATE, which is now of GST_TYPE_DATE;
	  use GST_READ_UINT32_LE() and friends rather than the private
	  implementation of those same macros.

2005-10-13  Stefan Kost  <ensonic@users.sf.net>

	* examples/stats/mp2ogg.c:
	  more typo fixes

2005-10-12  Stefan Kost  <ensonic@users.sf.net>

	* examples/indexing/indexmpeg.c: (main):
	* ext/esd/esdmon.c: (gst_esdmon_open_audio),
	(gst_esdmon_close_audio), (gst_esdmon_change_state):
	* ext/esd/esdmon.h:
	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_init):
	* ext/pango/gsttextoverlay.c: (gst_textoverlay_init):
	* gst/autodetect/gstautoaudiosink.c: (gst_auto_audio_sink_init):
	* gst/autodetect/gstautovideosink.c: (gst_auto_video_sink_init):
	* gst/avi/gstavimux.c: (gst_avimux_init):
	* gst/matroska/matroska-demux.c: (gst_matroska_demux_init):
	* gst/multipart/multipartdemux.c: (gst_multipart_demux_init):
	* gst/multipart/multipartmux.c: (gst_multipart_mux_init):
	* gst/oldcore/gstmultifilesrc.c: (gst_multifilesrc_init),
	(gst_multifilesrc_get), (gst_multifilesrc_open_file),
	(gst_multifilesrc_close_file), (gst_multifilesrc_change_state):
	* gst/oldcore/gstmultifilesrc.h:
	* gst/oldcore/gstpipefilter.c: (gst_pipefilter_init),
	(gst_pipefilter_open_file), (gst_pipefilter_close_file),
	(gst_pipefilter_change_state):
	* gst/oldcore/gstpipefilter.h:
	* gst/smoothwave/gstsmoothwave.c: (gst_smoothwave_init):