@@ -1,6 +1,6 @@
 plugin_LTLIBRARIES = libgstpng.la
 
-libgstpng_la_SOURCES = gstpng.c gstpngenc.c # gstpngdec.c
+libgstpng_la_SOURCES = gstpng.c gstpngenc.c gstpngdec.c
 libgstpng_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
 libgstpng_la_LIBADD = $(GST_LIBS) $(LIBPNG_LIBS)
 libgstpng_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
