@@ -1,3 +1,11 @@
+2005-10-15  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/libpng/Makefile.am:
+	* ext/libpng/gstpng.c: (plugin_init):
+	* ext/libpng/gstpngdec.c: (gst_pngdec_class_init),
+	(gst_pngdec_init), (user_read_data), (gst_pngdec_chain):
+	* ext/libpng/gstpngdec.h: Ported pngdec to 0.9
+
 2005-10-14  Michal Benes  <michal dot benes at xeris dot cz>
 
 	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>
